# euler

./: .gitignore  README.rst  pyproject.toml
euler/problems/: problem_1.py  problem_2.py  problem_3.py  problem_4.py
tests/: helpers.py  problem_1.py  problem_2.py  problem_3.py  problem_4.py
